--- a/quizPage/static/css/style.css
+++ b/quizPage/static/css/style.css
@@ -115,7 +115,7 @@ body {
     top: 0;
     height: 100vh;
     width: 100vw;
-    background: url("../img/bg.png") center top no-repeat;
+    background: url("../img/bg.jpg") center top no-repeat;
     background-size: cover;
     z-index: -1;
     opacity:0.7
