--- a/static/css/style.css
+++ b/static/css/style.css
@@ -115,9 +115,10 @@ body {
     top: 0;
     height: 100vh;
     width: 100vw;
-    background: url("../img/bg.png") center top no-repeat;
+    background: url("../img/bg.jpg") center top no-repeat;
     background-size: cover;
     z-index: -1;
+    opacity:0.7
 }
 
 ._container-l {
@@ -144,7 +145,7 @@ body {
 }
 
 .header__logo-img {
-    --size: 231px;
+    --size: 350px;
     width: var(--size);
     height: calc(var(--size) * 65 / 231);
     background: url("../img/logo.png") center no-repeat;
@@ -443,13 +444,14 @@ body {
 }
 
 .answer__content {
-    max-width: 400px;
     padding: 15px 50px 15px 15px;
     font-size: 16px;
     line-height: 115%;
     border-radius: 20px 0 20px 20px;
     background-color: rgba(75, 180, 98, .1);
     position: relative;
+    width:100%;
+    border:none;
 }
 
 .answer__content::after {
