--- a/quizPage/templates/quizPage/index.html
+++ b/quizPage/templates/quizPage/index.html
@@ -25,7 +25,9 @@
                 <div class="header__logo-img"></div>
             </div>
             <div class="header__user">
+                <div style="text-align:center"><a href="{% url 'about' %}">Контакты</a></div>
                 <div class="header__user-row">
+
                     <div class="header__user-img"></div>
                     <div class="header__user-content">
                         <p class="header__user-name">Екатерина Дмитриевна</p>
